@@ -15,7 +15,7 @@
   <!-- Copyright 1998 - 2009 Double Precision, Inc. See COPYING for -->
   <!-- distribution information. -->
   <iframe src=
-  "http://courier.cvs.sourceforge.net/*checkout*/courier/courier/courier/ChangeLog"
-  width="100%" height="80%" frameborder="0"></iframe>
+  "https://courier.svn.sourceforge.net/svnroot/courier/trunk/courier/ChangeLog"
+  width="100%" height="400" frameborder="0"></iframe>
 </body>
 </html>
